Project Setup and Category CRUD

--- a/Prism/Components/_Imports.razor
+++ b/Prism/Components/_Imports.razor
@@ -9,3 +9,7 @@
 @using Microsoft.JSInterop
 @using Prism
 @using Prism.Components
+@using Prism.Data
+@using Prism.Repository.IRepository
+@using Prism.Services.Extensions
+@using Prism.Components.Shared
