--- a/Prism/Components/Layout/NavBar.razor
+++ b/Prism/Components/Layout/NavBar.razor
@@ -15,6 +15,13 @@
                         <span class="bi bi-house-door" aria-hidden="true"></span> Home
                     </NavLink>
                 </li>
+
+                <li class="nav-item mx-2">
+                    <NavLink class="nav-link" href="/cart">
+                        <span class="bi bi-cart" aria-hidden="true"></span> Cart
+                    </NavLink>
+                </li>
+
             </ul>
             <ul class="d-flex navbar-nav mb-2 mb-md-0">
                 <AuthorizeView>
