Added Order Management and Third Party Components

--- a/Prism/Components/Pages/Cart_Pages/Cart.razor
+++ b/Prism/Components/Pages/Cart_Pages/Cart.razor
@@ -142,7 +142,7 @@ else
         var user = AuthState.User;
         OrderHeader.UserId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
         OrderHeader.Email = user.FindFirst(u => u.Type.Contains("email"))?.Value;
-        OrderHeader.Status = OrderStatus.StatusPending;
+        OrderHeader.Status = OrderStatus.Pending;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
