--- a/Prism/Components/_Imports.razor
+++ b/Prism/Components/_Imports.razor
@@ -13,3 +13,5 @@
 @using Prism.Repository.IRepository
 @using Prism.Services.Extensions
 @using Prism.Components.Shared
+@using Radzen
+@using Radzen.Blazor
