--- a/Prism/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/Prism/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -35,8 +35,20 @@ else
                     </div>
                     <!-- Description -->
                     <div class="form-floating py-3 col-12">
-                        <InputText id="description" class="form-control" @bind-Value="Product.Description" placeholder="Description" />
-                        <label for="description">Description</label>
+                       @*  <label for="description">Description</label> *@
+                        <RadzenHtmlEditor @bind-Value=@Product.Description style="height: 450px;" >
+@*                             <RadzenHtmlEditorUndo />
+                            <RadzenHtmlEditorRedo />
+                            <RadzenHtmlEditorSeparator />
+                            <RadzenHtmlEditorBold />
+                            <RadzenHtmlEditorItalic />
+                            <RadzenHtmlEditorUnderline />
+                            <RadzenHtmlEditorStrikeThrough />
+                            <RadzenHtmlEditorSeparator />
+                            <RadzenHtmlEditorColor />
+                            <RadzenHtmlEditorBackground />
+                            <RadzenHtmlEditorRemoveFormat /> *@
+                        </RadzenHtmlEditor>
                         <ValidationMessage For="@(() => Product.Description)" />
                     </div>
                     <!-- Special Tag -->
@@ -162,7 +174,7 @@ else
     {
         IsProcessing = true;
         var file = e.File;
-        FileInfo fileInfo = new(file.Name);
+        System.IO.FileInfo fileInfo = new(file.Name);
         var newFileName = $"{Guid.NewGuid()}.{fileInfo.Extension}";
         if (!Directory.Exists(_directoryPath))
         {
@@ -200,5 +212,8 @@ else
 
         }
     }
+
+
+string htmlValue = "";
         
 }
