Cart counter, Social Logins, and Stripe integration

--- a/Prism/Components/Layout/MainLayout.razor
+++ b/Prism/Components/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
 <div class="page">
     <AuthorizeView Roles="@RoleTypes.Role_Admin">
         <div class="sidebar">
-            <NavMenu />
+            <NavForAdmin />
         </div>
     </AuthorizeView> 
 
