--- a/Prism/Components/Account/Pages/ExternalLogin.razor
+++ b/Prism/Components/Account/Pages/ExternalLogin.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Prism.Data
+@using Prism.Utility
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
@@ -136,6 +137,8 @@
         var result = await UserManager.CreateAsync(user);
         if (result.Succeeded)
         {
+            //any external login will by default get the role of customer
+            await UserManager.AddToRoleAsync(user, RoleTypes.Role_Customer);
             result = await UserManager.AddLoginAsync(user, externalLoginInfo);
             if (result.Succeeded)
             {
