--- a/Prism/Components/Layout/NavBar.razor
+++ b/Prism/Components/Layout/NavBar.razor
@@ -1,11 +1,16 @@
-﻿<nav class="navbar navbar-expand-md navbar-dark bg-dark pb-4 pt-4">
+﻿@using Prism.Services;
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject SharedStateService SharedStateService
+@inject IShoppingCartRepository ShoppingCartRepository
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark pb-4 pt-4">
     <div class="container-fluid">
         <a class="navbar-brand" href="">
             <img src="/images/Logo.png" alt="Bootstrap" width="30" height="24">
             Prism
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-label="Toggle navigation">
+        aria-controls="navbarCollapse" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -18,7 +23,7 @@
 
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/cart" Match="NavLinkMatch.All">
-                        <span class="bi bi-cart" aria-hidden="true"></span> Cart
+                        <span class="bi bi-cart" aria-hidden="true"></span> Cart (@SharedStateService.TotalCartCount)
                     </NavLink>
                 </li>
 
@@ -33,9 +38,9 @@
                 <AuthorizeView>
                     <Authorized>
                         <li class="nav-item">
-                            <button class="nav-link active me-2" style="cursor: pointer; background: transparent; border: 0px;">
+                            <NavLink class="nav-link p-2" href="Account/Manage">
                                 Welcome, @context?.User?.Identity?.Name
-                            </button>
+                            </NavLink>
                         </li>
                         <li class="nav-item">
                             <form action="Account/Logout" method="post">
@@ -64,3 +69,33 @@
         </div>
     </div>
 </nav>
+
+@code
+{
+
+    protected override async Task OnInitializedAsync()
+    {
+        SharedStateService.OnChange += OnSharedStateChange;
+         await GetInitialCount();
+    }
+
+    private void OnSharedStateChange()
+    {
+        InvokeAsync(StateHasChanged);
+    }
+
+    public async Task GetInitialCount()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var userId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+
+        SharedStateService.TotalCartCount = await ShoppingCartRepository.GetTotalCartCountAsync(userId);
+        
+    }
+
+    public void Dispose()
+    {
+        SharedStateService.OnChange -= OnSharedStateChange;
+    }
+}
