--- a/Prism/Components/Pages/Order_Pages/OrderList.razor
+++ b/Prism/Components/Pages/Order_Pages/OrderList.razor
@@ -31,18 +31,18 @@ else
                 <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced" AllowSorting="true" PageSize="5" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true"
                 Data="@OrderHeaders" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" SelectionMode="DataGridSelectionMode.Single">
                 <Columns>
-                    <RadzenDataGridColumn Property="Id)" Filterable="true" Title="ID" Frozen="true" Width="80px" />
+                    <RadzenDataGridColumn Property="Id" Filterable="true" Title="ID" Frozen="true" Width="80px" />
 
                     <RadzenDataGridColumn Property="Name" Title="Name" Frozen="true" Width="120px" />
                     <RadzenDataGridColumn Property="PhoneNumber" Title="Phone Number" Width="120px"/>
                     <RadzenDataGridColumn Property="Email" Title="Job Title" Width="200px" />
-                        <RadzenDataGridColumn Property="OrderTotal" Title="Order Total" FormatString="{0:C}" Width="120px" />
+                     <RadzenDataGridColumn Property="OrderTotal" Title="Order Total" FormatString="{0:C}" Width="120px" />
                     <RadzenDataGridColumn Property="OrderDate" Title="Order Date" FormatString="{0:d}" Width="160px" />
                     <RadzenDataGridColumn Property="Status" Title="Status" Width="160px" />
                     <RadzenDataGridColumn Title="Action" Sortable="false" Filterable="false" Width="80px" TextAlign="TextAlign.Center" >
                         <Template Context="orderHeader">
                             <RadzenButton Shade="Shade.Lighter" Text="Details" ButtonStyle="ButtonStyle.Primary"
-                             Click="@(() => NavigationManager.NavigateTo($" order /details/{orderHeader.Id}"))"></RadzenButton>
+                             Click="@(() => NavigationManager.NavigateTo($" order/details/{orderHeader.Id}"))"></RadzenButton>
                         </Template>
                     </RadzenDataGridColumn> 
                 </Columns>
